--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -19,6 +19,7 @@ import Button from './button.astro';
       <Button
         styling='hidden lg:block'
         href='https://linktr.ee/manage.band/'
+        newTab
         label='Poznajmy się'
         variant='outline'
       />
