--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -17,6 +17,7 @@ import ManageBand from './manage-band.astro';
     </a>
     <Button
       href='https://linktr.ee/manage.band/'
+      newTab
       label='Poznajmy się'
       variant='outline'
     />
