--- a/src/components/tile.astro
+++ b/src/components/tile.astro
@@ -8,14 +8,16 @@ const { id, title, background, styling, img, backgroundImage } = Astro.props;
 
 <div
   id={id}
-  class={`border rounded-3xl border-transparent grid place-items-center py-8 ${
+  class={`border rounded-3xl border-transparent py-8 ${
     background ?? 'bg-background-dark'
   }${styling ? ` ${styling}` : ''}${
-    backgroundImage ? ' md:grid-cols-2' : ' px-12'
+    backgroundImage ? ' grid md:grid-cols-2' : ' px-12'
   }
   `}
 >
-  <div class=`${backgroundImage ? 'px-12' : ''}`>
+  <div
+    class=`flex flex-col justify-center items-start h-full ${backgroundImage ? 'px-12' : ''}`
+  >
     {img && <img src={img} alt={title} class='mb-4 h-16 w-16' />}
     <h2 class='mb-4 text-white'>{title}</h2>
     <slot name='content' />
