:lipstick: fixed button border

--- a/src/components/button.astro
+++ b/src/components/button.astro
@@ -9,7 +9,8 @@ export type Props = {
 
 const buttonColors = {
   color: 'bg-gradient-to-r from-brand to-brand-secondary',
-  outline: 'bg-transparent border-2 border-brand hover:bg-brand-tertiary',
+  outline:
+    'bg-transparent border-2 border-brand hover:bg-brand-tertiary hover:border-brand-tertiary',
 };
 
 const { href, label, variant = 'color', styling, newTab = false } = Astro.props;
