:art: cleaning up and adding new assets

--- a/src/components/for-who.astro
+++ b/src/components/for-who.astro
@@ -10,7 +10,12 @@ import ManageBand from './manage-band.astro';
 >
   <Fragment slot='lead'>
     <div class='grid place-items-center'>
-      <img src='mb-for-who.png' alt='Dla kogo?' width='1312px' height='598px' />
+      <img
+        src='dla-kogo-app-image.png'
+        alt='Dla kogo?'
+        width='1312px'
+        height='598px'
+      />
     </div>
   </Fragment>
   <Fragment slot='afterword'>
