--- a/src/components/hero-image.astro
+++ b/src/components/hero-image.astro
@@ -1,5 +1,5 @@
 <div
   class='hidden h-full py-8 backdrop-blur-md backdrop-filter lg:grid lg:place-items-center'
 >
-  <img src='mb-hand-app.png' alt='Manage.Band mobile app presentation' />
+  <img src='hero-image.png' alt='Manage.Band mobile app presentation' />
 </div>
