--- a/src/components/when.astro
+++ b/src/components/when.astro
@@ -2,7 +2,7 @@
   <div class='relative rounded-3xl border border-transparent'>
     <div
       id='when-image'
-      class={`absolute inset-0 bg-[url("/mb-when.png")] bg-cover bg-center bg-no-repeat rounded-3xl`}
+      class={`absolute inset-0 bg-[url("/when.png")] bg-cover bg-center bg-no-repeat rounded-3xl`}
     >
     </div>
     <div
