--- a/src/components/tile.astro
+++ b/src/components/tile.astro
@@ -1,6 +1,6 @@
 ---
-import type { Goal } from '@/types';
-export type Props = Goal & {
+import type { Feature } from '@/types';
+export type Props = Feature & {
   id: string;
 };
 const { id, title, background, styling, img, backgroundImage } = Astro.props;
