--- a/src/components/when.astro
+++ b/src/components/when.astro
@@ -1,3 +1,7 @@
+---
+import { links } from '@/content/_links';
+---
+
 <section id='when' class='container relative h-full scroll-mt-24'>
   <div class='relative rounded-3xl border border-transparent'>
     <div
@@ -13,7 +17,8 @@
         Planujemy oddać Wam aplikację do testów w <strong>2024 roku</strong>.
         Niebawem pojawi się jako <strong>Open Source</strong> na naszym <a
           class='bg-gradient-to-r from-brand to-brand-secondary bg-[length:100%_2px] bg-bottom bg-no-repeat transition-[background-size] hover:bg-[length:100%_100%]'
-          href='https://github.com/manage-band'>Githubie</a
+          href={links.github}
+          target='_blank'>Githubie</a
         >, zapraszamy wszystkich zainteresowanych - muzyków, programistów,
         testerów - do współpracy 😏
       </p>
