--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,11 +2,11 @@
 import '@/styles/global.css';
 const { generator, site } = Astro;
 const description =
-  'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Nullam in dui mauris. Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor.';
+  'Manage.Band is an open-source and privacy-respecting platform for managing your band.';
 ---
 
 <!doctype html>
-<html lang='en'>
+<html lang='en' class='h-full motion-safe:scroll-smooth' data-theme='dark'>
   <head>
     <meta charset='UTF-8' />
     <meta name='viewport' content='width=device-width' />
@@ -20,34 +20,10 @@ const description =
     <meta property='og:title' content='Manage.Band' />
     <meta property='og:type' content='website' />
     <meta property='og:url' content={site} />
-
-    <!-- initialize theme -->
-    <script is:inline>
-      const themeSaved = localStorage.getItem('theme');
-
-      if (themeSaved) {
-        document.documentElement.dataset.theme = themeSaved;
-      } else {
-        const prefersDark = window.matchMedia(
-          '(prefers-color-scheme: dark)',
-        ).matches;
-        document.documentElement.dataset.theme = prefersDark ? 'dark' : 'light';
-      }
-
-      window
-        .matchMedia('(prefers-color-scheme: dark)')
-        .addEventListener('change', (event) => {
-          if (!localStorage.getItem('theme')) {
-            document.documentElement.dataset.theme = event.matches
-              ? 'dark'
-              : 'light';
-          }
-        });
-    </script>
+    <meta property='og:image' content='/social.jpg' />
+    <meta property='og:description' content={description} />
   </head>
-  <body
-    class='h-full overflow-x-hidden bg-yellow-900 text-yellow-300 selection:bg-black selection:text-white'
-  >
+  <body class='h-full overflow-x-hidden bg-background text-white'>
     <slot />
   </body>
 </html>
