:bug: fixed typos and added updated asset

--- a/src/components/for-who.astro
+++ b/src/components/for-who.astro
@@ -11,7 +11,7 @@ import ManageBand from './manage-band.astro';
   <Fragment slot='lead'>
     <div class='grid place-items-center'>
       <img
-        src='dla-kogo-app-image.png'
+        src='dla-kogo-image.png'
         alt='Dla kogo?'
         width='1312px'
         height='598px'
