--- a/src/components/when.astro
+++ b/src/components/when.astro
@@ -18,7 +18,7 @@ import { links } from '@/content/_links';
         Niebawem pojawi się jako <strong>Open Source</strong> na naszym <a
           class='bg-gradient-to-r from-brand to-brand-secondary bg-[length:100%_2px] bg-bottom bg-no-repeat transition-[background-size] hover:bg-[length:100%_100%]'
           href={links.github}
-          target='_blank'>Githubie</a
+          target='_blank'>GitHubie</a
         >, zapraszamy wszystkich zainteresowanych - muzyków, programistów,
         testerów - do współpracy 😏
       </p>
