--- a/src/components/about-us.astro
+++ b/src/components/about-us.astro
@@ -34,8 +34,15 @@ import { About } from '@/content/_about';
         </div>
       </section>
     </div>
-    <div class='hidden lg:grid lg:place-items-center'>
-      TU BĘDZIE NASZE ZDJĘCIE 😇
+    <div class='hidden h-full lg:grid lg:place-items-center'>
+      <img
+        src='us.jpg'
+        alt='Manage.Band Team'
+        width='1000px'
+        height='1000px'
+        class='rounded-3xl border border-transparent'
+        title='fot. Klaudia Krupa'
+      />
     </div>
   </div>
 </section>
