--- a/src/components/about-us.astro
+++ b/src/components/about-us.astro
@@ -3,7 +3,7 @@ import { About } from '@/content/_about';
 ---
 
 <section id='about-us' class='container relative h-full scroll-mt-24'>
-  <div class='gap-16 lg:grid lg:grid-cols-2'>
+  <div class='place-items-center gap-16 lg:grid lg:grid-cols-2'>
     <div class='space-y-4'>
       <h2>O nas</h2>
       <section class='text-md space-y-4'>
@@ -34,8 +34,15 @@ import { About } from '@/content/_about';
         </div>
       </section>
     </div>
-    <div class='hidden lg:grid lg:place-items-center'>
-      TU BĘDZIE NASZE ZDJĘCIE 😇
+    <div class='hidden h-full lg:grid lg:place-items-center'>
+      <img
+        src='us.jpg'
+        alt='Manage.Band Team'
+        width='1000px'
+        height='1000px'
+        class='rounded-3xl border border-transparent'
+        title='fot. Klaudia Krupa'
+      />
     </div>
   </div>
 </section>
